# travelagent

./: mkdocs.yml  pyproject.toml
agent/: coordinator.py
core/: models.py  scoring.py  search.py
docs/: index.md
tests/: test_core.py  verify_agent.py
tools/: server.py
